# Todo_App_rust

./: Cargo.toml  README.md
Backend/: Cargo.toml  ReadMe.md
Backend/sql/: 01_db_schema.sql
Backend/src/: main.rs
Backend/src/_tests/: model_db.rs  model_todo.rs
Backend/src/model/: db.rs  mod.rs  todo.rs
Backend/src/security/: mod.rs
Frontend/: .gitignore
src/: main.rs  task_ops.rs
