[package]
name = "Todo_App_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
