[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = "0.6.2"
